# cmake_gtest

./: CMakeLists.txt  main.cpp  mymkfile  testhello.cpp
hello/: CMakeLists.txt  hello.cpp  hello.h
thrid_party/: buildgtest.txt
world/: CMakeLists.txt  world.cpp  world.h
